--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.11.13",
     "@nivo/bar": "^0.80.0",
     "@nivo/bump": "^0.80.0",
     "@nivo/core": "^0.80.0",
