--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "d3": "^7.8.2",
+    "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -47,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
