--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nivo/bump": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/generators": "^0.80.0",
+    "@nivo/treemap": "^0.80.0",
     "@nivo/waffle": "^0.80.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
