--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-interactions": "^7.0.26",
+    "@storybook/jest": "^0.1.0",
+    "@storybook/testing-library": "^0.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
