--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^6.9.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "react-vis-network-graph": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
