--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flowbite-react": "^0.4.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-chrono": "^2.2.4",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router": "^6.9.0",
