--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/x-data-grid": "^6.12.0",
     "@nivo/bar": "^0.80.0",
     "@nivo/bump": "^0.80.0",
     "@nivo/core": "^0.80.0",
